Update rbac rules for the event-producer deployment: target OCP 4.11 v2 scc

--- a/openshift/event-producer/values.yaml
+++ b/openshift/event-producer/values.yaml
@@ -26,7 +26,9 @@ serviceAccount:
   annotations: {}
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name: "event-producer-sa"
+  name: "event-consumer-sa"
+  # scc to assign to the serviceaccount
+  sccName: "nonroot-v2"
 
 podAnnotations: {}
 
